--- a/package.json
+++ b/package.json
@@ -26,32 +26,32 @@
     "url": "https://github.com/yourusername/appwhistler.git"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "graphql": "^16.8.1",
+    "@huggingface/inference": "^2.6.4",
     "apollo-server-express": "^3.13.0",
-    "pg": "^8.11.3",
-    "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.3.1",
+    "ethers": "^5.8.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "socket.io": "^4.6.2",
-    "axios": "^1.6.2",
+    "graphql": "^16.8.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
     "puppeteer": "^21.6.1",
-    "ethers": "^6.9.0",
-    "web3": "^4.3.0",
-    "@huggingface/inference": "^2.6.4"
+    "socket.io": "^4.6.2",
+    "web3": "^4.3.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "concurrently": "^8.2.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
     "eslint": "^8.56.0",
-    "prettier": "^3.1.1",
     "hardhat": "^2.19.4",
-    "@nomiclabs/hardhat-ethers": "^2.2.3"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
