--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "puppeteer": "^21.6.1",
+    "sanitize-html": "^2.17.0",
     "socket.io": "^4.6.2",
     "web3": "^4.3.0"
   },
