--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "pg": "^8.11.3",
     "puppeteer": "^21.6.1",
     "sanitize-html": "^2.17.0",
+    "uuid": "^9.0.1",
     "socket.io": "^4.6.2",
     "web3": "^4.3.0"
   },
