--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@huggingface/inference": "^2.6.4",
+    "@pinata/sdk": "^2.1.0",
     "@sendgrid/mail": "^8.1.6",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.6.2",
@@ -40,9 +41,11 @@
     "graphql": "^16.8.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "pg": "^8.11.3",
     "puppeteer": "^21.6.1",
     "sanitize-html": "^2.17.0",
+    "sharp": "^0.34.5",
     "socket.io": "^4.6.2",
     "uuid": "^9.0.1",
     "web3": "^4.3.0"
