--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,6 +1,6 @@
 # These are supported funding model platforms
 
-github:aresforblue-ai/appwhistler  
+github:aresforblue-ai  
 patreon: # Replace with a single Patreon username
 open_collective: appwhistler
 ko_fi: # Replace with a single Ko-fi username
