--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "test:verbose": "jest --verbose"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@sentry/node": "^10.26.0",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.13.2",
