--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
+    "@vitest/coverage-v8": "^4.0.13",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "supertest": "^6.3.3"
